feat: Expose stack TFE status, TFE Url, and Endpoints through HAPI (#1469)
